--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: csharp
 sudo: required
+dotnet: 2.0.0
 mono: none
-solution: "./ThinBasic.NET.sln"
+script:
+ - cd "./ThinBasic.NET"
+ - dotnet build
