--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -12,6 +12,8 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 2.2.108
+        dotnet-version: 2.0.0
     - name: Build with dotnet
-      run: dotnet build --configuration Release
+    run: |
+      cd "./ThinBasic.NET"
+      dotnet build
