--- a/ThinBasic.NET/ThinBasic.NET.csproj
+++ b/ThinBasic.NET/ThinBasic.NET.csproj
@@ -14,6 +14,8 @@
     <Platforms>AnyCPU;x86</Platforms>
     <Version>1.0.2</Version>
     <PackageIcon></PackageIcon>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -44,13 +46,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <TargetPath>thinCore.dll</TargetPath>
     </ContentWithTargetPath>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
   </ItemGroup>
 
 </Project>
