--- a/ThinBasic.NETTests/ThinBasic.NETTests.csproj
+++ b/ThinBasic.NETTests/ThinBasic.NETTests.csproj
@@ -4,6 +4,24 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <Company>Inwazy Technology</Company>
+
+    <Product>ThinBasic.NET</Product>
+
+    <Authors>Jiowcl</Authors>
+
+    <Copyright>Ji-Feng Tsai</Copyright>
+
+    <PackageLicenseExpression></PackageLicenseExpression>
+
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+
+    <PackageProjectUrl>https://github.com/jiowcl/ThinBasic.NET</PackageProjectUrl>
+
+    <RepositoryUrl>https://github.com/jiowcl/ThinBasic.NET</RepositoryUrl>
+
+    <PackageReleaseNotes>1.0.0</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -11,10 +29,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
-    <PackageReference Include="coverlet.collector" Version="1.3.0">
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
+    <PackageReference Include="coverlet.collector" Version="3.0.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -31,6 +49,10 @@
   <ItemGroup>
     <None Update="Sample\test.tbasic">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
     </None>
   </ItemGroup>
 
