--- a/ThinBasic.NETTests/ThinBasic.NETTests.csproj
+++ b/ThinBasic.NETTests/ThinBasic.NETTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>net6.0-windows;net5.0-windows</TargetFrameworks>
 
     <IsPackable>false</IsPackable>
 
@@ -22,6 +22,10 @@
     <RepositoryUrl>https://github.com/jiowcl/ThinBasic.NET</RepositoryUrl>
 
     <PackageReleaseNotes>1.0.0</PackageReleaseNotes>
+
+    <PlatformTarget>x86</PlatformTarget>
+
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -53,6 +57,10 @@
     <None Include="..\LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
     </None>
   </ItemGroup>
 
